KUDU-2194: use a common trace metric prefix to avoid overflowing intern map

Without a prefix, we end up prefixing trace metric names with the
corresponding thread pool's name, and each data directory has a uniquely
named thread pool. The magic number of data directories needed to overflow
the intern map is 34, though it'll be lower in production as the server will
have created other thread pools.

Change-Id: I2d95e440c3fef76d7cbfe568a014bab9cda7f329
Reviewed-on: http://gerrit.cloudera.org:8080/8340
Reviewed-by: Todd Lipcon <todd@apache.org>
Tested-by: Kudu Jenkins
Reviewed-by: Andrew Wong <awong@cloudera.com>